board/homepage/httproute-private/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage-private
spec:
  hostnames:
  - homepage-private.suffix-automatic-replace
  parentRefs:
  - kind: Gateway
    namespace: gateways
    name: main-private
    sectionName: https-main
  rules:
  - backendRefs:
    - kind: Service
      name: homepage
      port: 80
    sessionPersistence:
      type: Cookie
      sessionName: persistent-homepage
      cookieConfig:
        lifetimeType: Session
      absoluteTimeout: 24h
